tidying andf bump version

--- a/example_project/static/css/custom.css
+++ b/example_project/static/css/custom.css
@@ -1,29 +1,1 @@
-@font-face {
-  font-family: 'NeuzeitforPlymouthBlack';
-  src: url('/static/fonts/neuzeitplymouth/neuzeitforplymouth-black-webfont.eot');
-  src: url('/static/fonts/neuzeitplymouth/neuzeitforplymouth-black-webfont.eot?#iefix') format('embedded-opentype'), url('/static/fonts/neuzeitplymouth/neuzeitforplymouth-black-webfont.woff') format('woff'), url('/static/fonts/neuzeitplymouth/neuzeitforplymouth-black-webfont.ttf') format('truetype'), url('/static/fonts/neuzeitplymouth/neuzeitforplymouth-black-webfont.svg#NeuzeitforPlymouthBlack') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-.neuzeit {
-  font-family: 'NeuzeitforPlymouthBlack';
-}
-.logo {
-  font-size: 2.5em;
-  line-height: .9em;
-  font-weight: normal;
-  font-family: 'NeuzeitforPlymouthBlack';
-  text-transform: uppercase;
-}
-.logo a:hover {
-  text-decoration: none;
-}
-.logocaption {
-  color: #f07b05;
-}
-.logosmall {
-  font-size: .9em !important;
-}
-
-.form_field_wrapper { margin-top:1em; margin-bottom:2em;
-    /*border-bottom:1px #A8A8A8 dotted; */}
+/*Your custom CSS here*/
