--- a/signalbox/templates/manage/observations_todo.html
+++ b/signalbox/templates/manage/observations_todo.html
@@ -16,7 +16,7 @@
                 {% include 'manage/observations_todo_fragment.html' %}
 
             {%else%}
-                   <p>You're up to date with everything.</p>
+                   <p>you're up to date with everything.</p>
             {%endif%}
 
             {% endblock %}
