--- a/signalbox/templates/manage/observations_todo_fragment.html
+++ b/signalbox/templates/manage/observations_todo_fragment.html
@@ -4,36 +4,22 @@
 <h2> Alert: You have questionnaires which must be completed today...</h2>
 {% else %}
 {% endif %}
-<table class="table table-hover">
-    {% for study, obs_due in user.get_profile.obs_by_study %}
-    {% if forloop.first %}
-    {% endif %}
+<div class="row">
+<div class="">
+
+
+<table class="table  table-hover span8">
+    {% for study, obs_due in obs_by_study %}
 
     {% for o in obs_due %}
             <tr>
                 <td width=1%><span class="text-warning">
-                    {% if not o.display_time_remaining %}
-                    <i class="icon-pencil"></i>
-                    {% else %}
+                    {% if o.display_time_remaining %}
                     <i class="icon-time"></i>{% endif %}
-                    {{o.display_time_remaining}}
                     </span>
                 </td>
                 <td>
-                    {% if o.link %}
-                            {{o.label}}
-                    {% endif %}
-                    <p class="information">
-                    {% if o.reply_set.all.count %}
-                        Started {%for r in o.reply_set.all %}{{r.started|naturalday}}{%endfor%}
-                    {% endif %}
-                    </p>
-                </td>
-                <td>
-                    Will take approx {{o.script.asker.approximate_time_to_complete}} minutes
-                </td>
-                <td>
-                    <a class="btn  {% if not forloop.first %}disabled{% endif %}
+                    <a class="btn btn-large pull-right  {% if not forloop.first %}disabled{% endif %}
                             btn-primary" href="
                             {% if perms.ask.can_double_enter %}
                             {% url 'start_data_entry' o.token %}?next={{next}}
@@ -44,12 +30,21 @@
                         {% if o.script.user_instructions %}
                             {{o.script.user_instructions}}
                         {% else %}
-                            Start questionnaire
+                            Start
                         {% endif %}
                     </a>
 
+                    <p class="information">
+
+                    {% if o.link %}
+                    <h3>{{o.label}}</h3>
+                    {% endif %}
+                    (Will take approx {{o.script.asker.approximate_time_to_complete}} minutes)
+                    </p>
                 </td>
             </tr>
     {% endfor %}
 {% endfor %}
 </table>
+</div>
+</div>
