--- a/signalbox/templates/manage/participant_overview.html
+++ b/signalbox/templates/manage/participant_overview.html
@@ -41,7 +41,7 @@
          <h4>Tasks outstanding for user: {{participant}}</h4>
          {% include "manage/participant_observations_fragment.html" %}
          {% else %}
-            <h4>You're up to date with everything.</h4>
+            <h4>you're up to date with everything.</h4>
          {% endif %}
        </div>
         <div class="tab-pane" id="tabmemberships">
