--- a/signalbox/static/css/signalbox.css
+++ b/signalbox/static/css/signalbox.css
@@ -1,8 +1,18 @@
+.table h4 {margin-top:0;}
+
+.rotate {
+    -webkit-transform: rotate(25deg); -moz-transform: rotate(25deg); -ms-transform: rotate(25deg); -o-transform: rotate(25deg); transform: rotate(25deg);
+    margin-bottom:2em;
+}
+
+.btn-group {
+    display: inline-block;
+}
 .colorhighlight {
   color: #f07b05 !important;
 }
 body {
-  padding-top: 2em;
+  padding-top: 100px;
   padding-bottom: 40px;
 }
 /* FOR QUESTIONNAIRES/FORMS */
