--- a/signalbox/templates/signalbox/user_home.html
+++ b/signalbox/templates/signalbox/user_home.html
@@ -9,7 +9,7 @@
         <div class="tabbable span12"> <!-- Only required for left/right tabs -->
         <ul class="nav nav-tabs" id="usertabs">
 
-            <li {% if l > 0 %}class="active"{% endif %}><a href="#tabtasks" data-toggle="tab">
+            <li class="active"><a href="#tabtasks" data-toggle="tab">
                 Tasks to do
 
                 <span class="
@@ -18,45 +18,40 @@
                 ">{{l}}</span> </a>
 
             </li>
-            <li {% if l < 1 %}class="active"{% endif %}><a href="#tabextra" data-toggle="tab">Extra questionnaires</a></li>
-            <li><a href="#tabreplies" data-toggle="tab">Previous replies</a></li>
+            <li><a href="#tabextra" data-toggle="tab">Extra questionnaires</a></li>
             <li><a href="#tabstudies" data-toggle="tab">Studies</a></li>
             <li><a href="#tabdetails" data-toggle="tab">Personal details</a></li>
         </ul>
 
           <div class="tab-content">
-            <div class="tab-pane {% if l > 0 %}active{% endif %}" id="tabtasks">
-                 <h1 style="text-transform:capitalize;">
+            <div class="tab-pane active" id="tabtasks">
+                 <h2>
+                    <span style="text-transform:capitalize;">
                     {% if user.first_name %}
                         {{user.first_name}},
                     {% else %}
                         {{user.username}},
                     {% endif %}
-                </h1>
-                {% if user.get_profile.tasklist_observations|length > 0 %}
-                    <h4>You have questionnaires to do:</h4>
+                </span>
+
+                {% if l > 0 %}
+                    you have questionnaires to complete:</h2><br/><br/>
                     {% with user.get_profile.obs_by_study as obs_by_study %}
                         {% include 'manage/observations_todo_fragment.html' %}
                     {% endwith %}
                 {%else%}
-                       <p>You're up to date with everything.</p>
+                       you're up to date with everything.</h2>
                 {%endif%}
             </div>
             {% endwith %}
-            <div class="tab-pane {% if l < 1 %}active{% endif %}" id="tabextra">
+
+            <div class="tab-pane" id="tabextra">
                 {% with request.user as participant %}
                     {% include "admin/signalbox/_fragments/_ad_hoc_scripts.html" %}
                 {% endwith %}
             </div>
-
-            <div class="tab-pane" id="tabreplies">
-                {% with request.user as participant %}
-                    {% include "admin/signalbox/_fragments/_previous_replies.html" %}
-                {% endwith %}
-            </div>
-
-            <div class="tab-pane" id="tabdetails">
-                    <p><a class="btn btn-primary pull-right" href="{% url "update_profile_for_studies" %}">Update your details</a></p>
+            <div class="tab-pane span8" id="tabdetails">
+                    <p><a class="btn" href="{% url "update_profile_for_studies" %}">Update your details</a></p>
 
                     <table class="small">
                     <tr>
@@ -75,11 +70,11 @@
 
             <div class="tab-pane" id="tabstudies">
 
-                {% if user.get_profile.current_studies %}
+                {% if user.get_profile.current_memberships %}
                 <h4>Current studies</h4>
 
                 <ul>
-                    {% for m in user.get_profile.current_studies %}
+                    {% for m in user.get_profile.current_memberships %}
                     <li><a href="{% url 'membership_home' m.id %}">{{m.study.name}}</a>
 
                         {% if m.study.show_study_condition_to_user %}
@@ -95,10 +90,10 @@
                 {% endif %}
 
 
-                {% if user.get_profile.other_studies %}
+                {% if user.get_profile.other_memberships %}
                 <h4>You previously took part in:</h4>
                 <ul>
-                {% for m in user.get_profile.other_studies %}
+                {% for m in user.get_profile.other_memberships %}
                     <li>{{m.study.name}}</li>
                 {% endfor %}
                 </ul>
