--- a/signalbox/templates/base.html
+++ b/signalbox/templates/base.html
@@ -42,7 +42,7 @@
                   <div class="container-fluid">
                 {% block brand %}
                 <div class="brand">
-                    <a href="/">Signalbox</a>
+                    <a href="/">{{BRAND_NAME}}</a>
                 </div>
                 {% endblock %}
 
