Allow for 2-pass validation of forms. This means conditional questions can also be required, but only prevent form completion if they are conditionally-shown based on previous answers

--- a/ask/templates/admin/ask/text_asker_edit.html
+++ b/ask/templates/admin/ask/text_asker_edit.html
@@ -74,7 +74,7 @@ $(document).ready(function() {
     {% endif %}
     {% if not form.locked %}{{form.text}}
     {% else %}
-    <div class="alert">Locked for editing because Replies have already been made <a class="btn" href="{% url "admin:signalbox_reply_changelist" %}?asker__id__exact=34&o={{form.asker.id}}">Delete previous replies</a>
+    <div class="alert">Locked for editing because Replies have already been made <a class="btn" href="{% url "admin:signalbox_reply_changelist" %}?asker__id__exact={{form.asker.id}}">Delete previous replies</a>
     </div>
     <p><pre>{{form.fields.text.initial|markdown}}</pre>
     {% endif %}
