--- a/ask/templates/admin/ask/text_asker_edit.html
+++ b/ask/templates/admin/ask/text_asker_edit.html
@@ -4,57 +4,39 @@
 {% load floppyforms %}
 
 {% block breadcrumbs %}{% endblock %}
-{% block content_title %}<span class="brand">{{asker.name}}</span>{% endblock %}
+
+{% block content_title %}<span class="brand">{{asker.name}}</span>
+
+    <form action="." method="POST" accept-charset="utf-8">
+
+    <a class='btn btn-primary pull-right' style="margin-left:.5em;" href='{% url "preview_asker" asker.id 0 %}'>Preview</a>
+
+    <input type="submit" class="btn btn-danger pull-right" style="margin-left:.5em;" value="Save changes"/>
+
+    <a class='btn pull-right' style="margin-left:.5em;" href='{% url "admin:ask_asker_change" asker.id %}'>Edit details</a>
+
+{% endblock %}
+
+
 {% block content %}
-
-
-
-<style>
-#id_text {width:98%; font-family:"inconsolata", "menlo", monospace;}
-body {padding-top:120px;}
-#topbar{background-color: white; margin-top:46px; padding-top:10px;}
-#fader {
-    padding-top:0px; margin-top:-10px;
-    height:40px;
-    background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
-}
-</style>
-<script>
-$(document).ready(function() {
-    var $abc = $("#id_yaml");
-    $abc.css("height", $abc.attr("scrollHeight"));
-})
-</script>
-
-
-
+    <style>
+    #id_text {width:98%; font-family:"inconsolata", "menlo", monospace;}
+    .scores { font-family:"inconsolata", "menlo", monospace; white-space: pre;}
+    </style>
+    <script>
+    $(document).ready(function() {
+        var $abc = $("#id_yaml");
+        $abc.css("height", $abc.attr("scrollHeight"));
+    })
+    </script>
 
 {%if form %}
-<form action="." method="POST" accept-charset="utf-8">
-
-
     <div class="container">
 
     <div class="navbar navbar-fixed-top navbar-inverse">
 
         <div class="container" >
         <div class="navbar-header" id="topbar">
-
-
-         <a class='btn btn-large btn-primary pull-right' href='{% url "preview_asker" asker.id 0 %}'>Preview</a>
-
-
-
-                <input type="submit" class="btn btn-danger btn-large" value="Save changes"/>
-
-                <a class='btn btn-large' style="margin-left:.5em;" href='{% url "admin:ask_asker_change" asker.id %}'>Edit details</a>
-
 
      </div>
      <div id="fader">
@@ -74,32 +56,29 @@ $(document).ready(function() {
     {% endif %}
     {% if not form.locked %}{{form.text}}
     {% else %}
-    <div class="alert">Locked for editing because Replies have already been made <a class="btn" href="{% url "admin:signalbox_reply_changelist" %}?asker__id__exact={{form.asker.id}}">Delete previous replies</a>
+    <div class="alert">Locked for editing because Replies have already been made <a class="btn" href="{% url "admin:signalbox_reply_changelist" %}?asker={{asker.id}}">Delete previous replies</a>
     </div>
     <p><pre>{{form.fields.text.initial|markdown}}</pre>
     {% endif %}
-
-
 </div>
 
 <div class="span5">
 {% for i in asker.askpage_set.all %}
 
 <div class="control-group">
-    <span class="pull-right">{{i.order}}</span><h4>{{i.step_name}}</h4>
+<h4>{{i.step_name}}</h4>
 </div>
 
 {% for j in i.get_questions %}
 <div >
-
-    <pre><code><a href="{% url "admin:ask_question_change" j.id %}">#{{j.variable_name}}</a></code>{% if j.required %}*{% endif %} <span class="muted">({{j.q_type}})</span>
-{{j.text}}
-{% if j.choiceset %}
-<pre>{{j.choiceset.choices_as_string}}</pre>{% endif %}{% if j.widget_kwargs %}
-<pre>{{j.widget_kwargs}}</pre>{% endif %}{% if j.scoresheet %}
-<pre>Computed score: scores.{{j.scoresheet}}</pre>{% endif %}
-</pre>
+    <code><a href="{% url "admin:ask_question_change" j.id %}">#{{j.variable_name}}</a>{% if j.required %}*{% endif %}</code> {% if j.extra_attrs.if %}if {{j.extra_attrs.if}}{% endif %} <span class="muted pull-right">({{j.q_type}})</span>
+<p>{{j.text}}</p>
+<div class="scores">
+{% if j.choiceset %}{{j.choiceset.choices_as_string}}{% endif %}
 </div>
+{% if j.scoresheet %}Computed score: scores.{{j.scoresheet}}{% endif %}
+</div>
+<hr>
 {% endfor %}
 {% endfor %}
 </div>
